# example-axum-k8s

./: Cargo.toml  README.md  kubeconfig.yaml
src/: lib.rs  main.rs
src/kube/: mod.rs
